--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,5 @@
-# Grok API Configuration
-GROK_API_KEY=xai-your-api-key-here
+# Groq API Configuration
+GROQ_API_KEY=your-groq-api-key-here
 
 # Firebase Configuration
 FIREBASE_CREDENTIALS_PATH=./serviceAccount.json
