--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -12,7 +12,7 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - GROK_API_KEY=${GROK_API_KEY}
+      - GROQ_API_KEY=${GROQ_API_KEY}
       - FIREBASE_CREDENTIALS_PATH=/app/credentials/serviceAccount.json
       - FIREBASE_STORAGE_BUCKET=${FIREBASE_STORAGE_BUCKET}
       - BASE_URL=${BASE_URL:-http://localhost:3000}
